Backend/k8s-istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: acme-challenge
  namespace: default
spec:
  selector:
    matchLabels:
      app: acme-challenge
  mtls:
    mode: DISABLE
