Backend/k8s-istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default
  namespace: default
spec:
  host: "*.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: acme-challenge
  namespace: default
spec:
  host: acme-challenge.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
