Backend/k8s-istio/service-entry-redis.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: redis-external
  namespace: default
spec:
  hosts:
    - redis.default.svc.cluster.local
  ports:
    - number: 6379
      name: tcp-redis
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
