Backend/k8s-istio/service-entry-smtp.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: smtp-external
  namespace: default
spec:
  hosts:
    - smtp.maileroo.com
  ports:
    - number: 587
      name: smtp
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
