Backend/k8s-istio/virtual-service-nats.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nats-ws
  namespace: default
spec:
  hosts:
    - "nats.pinz.website"
  gateways:
    - pinz-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: nats.default.svc.cluster.local
            port:
              number: 8080
