Backend/k8s-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-gateway
  namespace: default
spec:
  hosts:
    - "pinz.website"
  gateways:
    - pinz-gateway
  http:
    - match:
        - port: 80
          uri:
            prefix: /.well-known/acme-challenge/
      route:
        - destination:
            host: acme-challenge.default.svc.cluster.local
            port:
              number: 80
    - match:
        - port: 80
          uri:
            prefix: /
      redirect:
        scheme: https
        redirectCode: 301
    - match:
        - port: 443
          uri:
            prefix: /health
      route:
        - destination:
            host: api-gateway.default.svc.cluster.local
            port:
              number: 8080
    - match:
        - port: 443
          uri:
            prefix: /
      route:
        - destination:
            host: api-gateway.default.svc.cluster.local
            port:
              number: 8080
